finish jvm questions